# tp-pose-nav

./: README.md  calibration
argos/: CMakeLists.txt  CMakeLists.txt~
argos/controllers/: CMakeLists.txt  CMakeLists.txt~
argos/controllers/marXbot/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_old.txt  Consts.cpp  Consts.h  Consts.h~  Map.cpp  Map.h~  World.cpp  World.h  a.out  dug.h  footbot_diffusion-offline.cpp~  footbot_diffusion.cpp~  marXbot.cpp  marXbot.h  marXbot.h~  marXbot_test.cpp  marXbot_test.cpp~  marXbot_test.h  marXbot_test.h~  offline.cpp  offline1.txt  offmarXbot.cpp  offmarXbot.cpp~  offmarXbot2.cpp~  parameters.cpp  parameters.h  parameters.h~
argos/experiments/: diffusion_1.argos~  marXbot_test.argos  marXbot_test.argos~  marXbot_test.xml~  test.argos  test.argos~
aseba/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  version.h
aseba/cmd/: Makefile  asebacmd  cmake_install.cmake
aseba/dump/: Makefile  asebadump  cmake_install.cmake
aseba/eventlogger/: CTestTestfile.cmake  Makefile  asebaeventlogger  (+1 more)
map/: a.out  footbot.txt  footbot1.txt  map1.xml  offline-low.txt  offline.cpp  offline.cpp~  offline.txt  offline.txt~  output2.txt  rec.cpp  rec.cpp~  rec.h
pose-estimation-physical/: Consts.h  Consts.h~  Makefile  Map.cpp  Map.h  calibration.cpp  calibration.h  cqt6  final.txt  final.txt~  final2.txt  main.cpp  main.h  out.txt  parameters.cpp  parameters.h  pose-estimation-physical  pose-estimation-physical.pro  pose-estimation-physical.pro.user.1.3  pose-estimation-physical.pro.user.2.5pre1  realrobot.py
(+65 files in other folders)
